# notice-ical

./: README.md  package-lock.json  package.json  svelte.config.js  tailwind.config.js
src/: app.css  app.html
src-tauri/: Cargo.toml  hooks.nsi  installer.nsi  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: aes_cipher.rs  config.rs  convert_preference.rs  ical_config.rs  ical_downloader.rs  ical_reader.rs  ical_writer.rs  logger.rs  main.rs  paths.rs  primitive.rs
src/lib/: Alert.svelte  Info.svelte  PreferenceItems.svelte  messageStore.ts  notification.ts  preferenceStore.ts  preferenceWindow.ts
src/routes/: +page.svelte
