[package]
name = "notice-ical"
version = "1.0.0"
description = "notice ical"
authors = ["Masashi.Ohashi"]
license = ""
repository = ""
default-run = "notice-ical"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.4", features = ["tray-icon"] }
toml = "0.5.5"
directories = "5.0.0"
log = "0.4"
fern = "0.6"
chrono = "0.4"
lazy_static = "1.4"
reqwest = { version = "0.11", features = ["blocking"] }
ical = "0.11"
tokio = { version = "1", features = ["full"] }
hostname = "0.3"
aes = "0.7"
block-modes = "0.8"
block-padding = "0.2"
base64 = "0.22.1"
tauri-plugin-notification = "2.0.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"
